Nav dropdown visibility issue fixed

--- a/src/app/shared/components/n-home-header/n-home-header.component.scss
+++ b/src/app/shared/components/n-home-header/n-home-header.component.scss
@@ -256,7 +256,6 @@ padding: .5rem 1rem;
   background-color: #F7BDAD ;
   padding-left: 100%;
   box-sizing: content-box;
-  z-index: 999999;
 }
 .ticker-wrap .ticker {
   display: inline-block;
